# template

./: README.md
cmake/: CMakeLists.txt  CMakePresets.json
cmake/src/: main.cpp
cmake/src/memory/: memory.hpp
premake/: premake5.lua
premake/src/: main.cpp
premake/src/proxy/: proxy.cpp  proxy.hpp
